--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.hcx</groupId>
-  <artifactId>SharePowerbank</artifactId>
+  <artifactId>SmartDustbin</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
